2019-12-18     1. Fix bug that add/del site not to trigger re-collect. 2020-01-07     1. Fix bug that conf change would cause some platforms not checked again. 2020-05-12     1. Fix the problem loop when check vm is starting if vm cannot be started.     2. Change PM passwd. 2020-05-15     1. Support Chinese in desc/owner.

--- a/conf/main.conf
+++ b/conf/main.conf
@@ -1,9 +1,9 @@
 # case sensitive for section titles, not for value pairs.
 [host]
-Nodelist: 10.200.0.2
+Nodelist: bestsrv04li
 
 [display]
-Nodelist: 172.30.21.1
+Nodelist: hdsr09c01
 
 [parameter]
 open_stop_vm : False
